--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  border-left: 1px solid rgba(95, 95, 95, 0.2);
+}
+::-webkit-scrollbar-thumb {
+  background: #4cf019;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #696969;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -34,7 +47,7 @@ body {
 }
 
 .header {
-  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.199);
+  box-shadow: 1px 1px 6px 0 rgba(0, 0, 0, 0.4);
   position: fixed;
   width: 100%;
   z-index: 3;
@@ -50,7 +63,7 @@ body {
 }
 
 .header {
-  background-color: white;
+  background-color: #5f5f5f;
 }
 
 .header li a {
@@ -59,7 +72,7 @@ body {
   text-transform: uppercase;
   font: 18px 'Abel', sans-serif;
   padding: 10px;
-  background-color: white;
+  background-color: #5f5f5f;
 }
 
 
@@ -155,8 +168,8 @@ body {
 .first-banner{
   height: 980px;
   width: 100%;
-  margin-bottom: 6em;
-  background-image: url('/assets/img/paint-4191399_192.jpg');
+  padding-bottom: 3em;
+
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -171,7 +184,7 @@ body {
   text-align: left;
   justify-content: center;
   color: #000;
-  padding: 3em;
+  padding-bottom: 4em;
 }
 
 .first-banner-content div {
@@ -183,6 +196,17 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  max-width: 400px;
+  height: auto;
+}
+#logo-img {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
+}
+
+.fb-content-text h1 {
+  margin-bottom: 30px;
 }
 
 .fb-content-logo h2 {
@@ -190,15 +214,112 @@ body {
   padding-left: 40px;
 }
 
-.second-banner {
-  height: 500px;
+.buttonAbout{
+  padding-top: 1.5em;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.buttonAbout a{
+  display: block;
+  width: 200px;
+  height: 40px;
+  line-height: 35px;
+  font-size: 18px;
+  font: 'Abel', sans-serif;
+  text-decoration: none;
+  color: #333;
+  background-color: #4cf019;
+  border: #4cf019 1px solid;
+  text-align: center;
+  position: relative;
+  transition: all .35s;
+}
+
+.buttonAbout a span{
+  position: relative;
+  z-index: 2;
+}
+
+.buttonAbout a:after{
+  position: absolute;
+  content: ' ';
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #333;
+  transition: all .35s;
+}
+
+.buttonAbout a:hover{
+  color: #4cf019;
+}
+
+.buttonAbout a:hover:after{
+  width: 100%;
+}
+
+
+.banner {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 3em;
+  padding-bottom: 5em;
+  text-align: center;
+}
+
+.bloc-img-section {
+  padding: 3em;
+}
+
+.bloc-img-section img {
+  border-radius: 50%;
+  border: 5px solid #4cf019;
+}
+
+.bloc-img-section img:hover {
+  opacity: 0.8;
+  -webkit-transition: .3s ease-in;
+	transition: .3s ease-in-out;
+}
+
+.text-3 {
+  text-align: center;
+  color: #fff;
+  padding-top: 2em;
+}
+
+.one-up {
+  background-color: #808080;
+}
+
+.two-up {
+  background-color: #4cf019;
+}
+
+.second-banner, .third-banner {
+  height: 800px;
   width: auto;
   margin: 4em;
   display: flex;
   align-items: center;
   cursor: default;
+  padding-top: 2em;
 }
 
+.second-banner-content {
+  display: flex;
+  align-items: center;
+}
+
+.second-banner-content div p {
+  padding-top: 2em;
+  padding-right: 1em;
+}
 .second-banner-content div h3 {
   font-family: 'Audiowide', sans-serif;
 }
@@ -221,28 +342,18 @@ body {
   transition: width .4s;
 }
 
-.banner {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 3em 1em;
-  text-align: center;
+.imgslide {
+  opacity: 1;
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
 }
 
-.bloc-img-section, .text-3 {
-  padding: 2em 1em;
+.imgslide:hover {
+	opacity: 0.5;
 }
 
-.text-3 {
-  align-items: center;
-  justify-content: space-between;
-}
-.one-up {
-  background-color: #808080;
-}
-
-.two-up {
-  background-color: #4cf019;
+.third-banner {
+  flex-direction: column;
 }
 
 #section-footer {
@@ -250,7 +361,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #696969;
+  background: #808080;
 }
 
 #section-footer::before {
@@ -260,21 +371,20 @@ body {
   height: 100%;
   top: auto;
   left: 0;
-  background: #696969;
+  background: #808080;
 }
 
 .footer-container {
   display: flex;
   position: relative;
-  min-width: 1000px;
+  min-width: 980px;
   min-height: 425px;
   z-index: 1;
 }
-
 .footer-container .contact-info {
   font-family: 'Abel', sans-serif;
   position: absolute;
-  top: 40px;
+  top: 60px;
   width: 300px;
   height: calc(100% - 80px);
   background-color: #4cf019;
@@ -286,8 +396,6 @@ body {
   justify-content: space-between;
   box-shadow: 0 20px 25px rgba(0, 0, 0, 0.15);
 }
-
-
 .footer-container .contact-info h2{
   color: #000;
   font-size: 24px;
@@ -295,12 +403,10 @@ body {
   padding-bottom: 20px;
   margin-left: 10px;
 }
-
 .footer-container .contact-info ul.info {
   position: relative;
   margin-left: 16px;
 }
-
 .footer-container .contact-info ul.info li {
   display: flex;
   margin: 20px 0;
@@ -308,19 +414,15 @@ body {
   cursor: pointer;
   align-items: flex-start;
 }
-
 .footer-container .contact-info ul.info li span img {
   padding-right: 15px;
   height: 30px;
   filter: invert(0);
 }
-
 .footer-container .contact-info ul.info li span:nth-child(2) {
   color: #000;
   font-weight: 500;
 }
-
-
 .footer-container .contact-form {
   font-family: 'Abel', sans-serif;
   font-weight: normal;
@@ -329,18 +431,15 @@ body {
   padding-left: 230px;
   margin-left: 130px;
   width: calc(100% - 150px);
-  height: 100%;
-  background: #8f6767;
+  background: #5f5f5f;
   box-shadow: 0 50px 50px rgba(0, 0, 0, 0.15);
 }
-
 .contact-form h2 {
   font-weight: normal;
-  padding-bottom: 12px;
+  padding-top: 12px;
   margin-bottom: 10px;
   color: #4cf019;
 }
-
 .footer-container .contact-form .formBox {
   display: flex;
   position: relative;
@@ -348,41 +447,33 @@ body {
   flex-wrap: wrap;
   padding-top: 20px;
 }
-
 .contact-form .formBox .inputBox {
   position: relative;
   margin-bottom: 10px;
   color: #fff;
   font-weight: 500;
 }
-
 .contact-form .formBox .inputBox.w50{
   width: 46%;
-
 }
-
 .contact-form .formBox .inputBox.w100{
   width: 100%;
 }
-
 .contact-form .formBox .inputBox {
-  padding-bottom: 16px;
+  padding-top: 12px;
 }
-
 .contact-form .formBox .inputBox input,
 .contact-form .formBox .inputBox textarea {
   width: 100%;
   resize: none;
   padding: 7px 0px;
-  font-size: 15px;
-  font: normal 'Abel', sans-serif;
+  font: 19px 'Abel', sans-serif;
   color: #fff;
   background-color: transparent;
   border: none;
   outline: none;
   border-bottom: 1px solid #4cf019;
 }
-
 .contact-form .formBox .inputBox input:focus ~ span,
 .contact-form .formBox .inputBox input:valid ~ span,
 .contact-form .formBox .inputBox textarea:focus ~ span,
@@ -390,11 +481,9 @@ body {
   transform: translateY(-15px);
   font-weight: 400;
   color: #4cf019;
-  letter-spacing: 1px;
   text-transform: uppercase;
   font-size: 12px;
 }
-
 .contact-form .formBox .inputBox input[type="submit"] {
   position: relative;
   cursor: pointer;
@@ -404,29 +493,74 @@ body {
   max-width: 150px;
   padding: 12px;
 }
-
 .contact-form .formBox .inputBox span {
   pointer-events: none;
   position: absolute;
   left: 0;
   padding: 5px 0;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 300;
   transition: 0.3s;
 }
-
 .contact-form .formBox .inputBox input[type="submit"]:hover {
   background: #35b60d;
-
 }
-
 .contact-form .formBox .inputBox textarea {
   height: 120px;
   background-color: transparent;
   border-bottom: 1px solid #4cf019;
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 520px) {
+  .first-banner-content{
+    display: flex;
+    flex-direction: column;
+    width: 100vh;
+    justify-content: center;
+    color: #000;
+  }
+  .footer-container .contact-form {
+    padding: 21px!important;
+  }
+
+  .footer-container .contact-info ul.info {
+    margin: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer-container .contact-form,
+  .footer-container .contact-form {
+    padding: 25px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .footer-container .contact-info ul.sci {
+    margin-top: ;
+  }
+  .text-3 {
+    display: block;
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .first-banner {
+    width: 80%;
+    padding-left: 1em;
+  }
+  .fb-content-text {
+    display: block;
+    text-align: left;
+
+  }
+  .fb-content-logo {
+    flex-direction: column;
+  }
+
+  .fb-content-logo h2 {
+    padding-left: 20px;
+  }
 
 }
 
@@ -449,13 +583,14 @@ body {
     width: calc(100% - 350px);
     margin-left: 0;
     padding-left: 0;
-    padding: 40px;
+    padding: 32px;
     height: 500px;
     box-shadow: none;
   }
 
   #section-footer {
-    background: royalblue;
+    background: grey;
+    padding-top: 6em;
   }
   #section-footer::before {
     display: none;
@@ -471,18 +606,6 @@ body {
   }
 }
 
-
-@media (max-width: 600px) {
-  .footer-container .contact-form,
-  .footer-container .contact-form {
-    padding: 25px;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .footer-container .contact-info ul.sci {
-    margin-top: ;
-  }
-}
 
 @media (min-width: 48em) {
   .header li {
@@ -510,18 +633,17 @@ body {
   .first-banner {
     height: 980px;
     width: 100%;
-    flex-wrap: wrap;
-    margin-bottom: 6em;
+
+    margin-bottom: 3em;
     background-color: #696969;
   }
-
 
 }
 @media screen and (max-width: 1005px) {
   .first-banner {
     height: 980px;
     width: 100%;
-    flex-wrap: wrap;
+
     margin-bottom: 6em;
     background-color: #696969;
   }
@@ -530,8 +652,14 @@ body {
 @media screen and (min-width: 1400px) {
   .banner {
     flex-direction: column;
+    display: flex;
+
   }
-  .bloc-img-section .text-3 h4 {
-    width: 3px;
+}
+
+@media screen and (max-width: 1400px) {
+  .bloc-img-section h4{
+    width: 310px;
+    margin: auto;
   }
 }
