--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,8 +21,8 @@
 }
 
 .svg-icon {
-  width: 2.5em;
-  height: 2.5em;
+  width: 2em;
+  height: 2em;
   margin-right: 5px;
 }
 
@@ -32,10 +32,6 @@
   fill: #000;
 }
 
-.svg-icon circle {
-  stroke: #000;
-  stroke-width: 1;
-}
 
 * {
   padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
@@ -67,11 +63,6 @@ body {
 main {
   display: inherit;
 }
-
-.container {
-  display: grid;
-  margin: auto;
- }
 
 .header {
   box-shadow: 1px 1px 6px 0 rgba(0, 0, 0, 0.4);
@@ -141,6 +132,7 @@ main {
   padding: 10px 10px 10px 10px;
   line-height: 45px;
   font-family: "Audiowide", sans-serif;
+  margin-left: 10px;
 }
 
 .nav > .nav-btn {
@@ -152,7 +144,8 @@ main {
   float: right;
   font-size: 18px;
   line-height: 40px;
-  padding-right: 30px;
+  padding-right: 0px;
+  margin-right: 30px;
 }
 
 .nav > .nav-links > a {
@@ -172,12 +165,14 @@ main {
 
 .first-banner{
   display: flex;
-  width: 100vh;
   align-items: center;
-  text-align: left;
   justify-content: center;
-  color: #000;
   padding-bottom: 4em;
+  height: 920px;
+  width: 100%;
+  text-align: left;
+  color: #000;
+  background: #808080;
 }
 
 .first-banner-content div {
@@ -185,26 +180,15 @@ main {
   font-size: 70px;
 }
 
-.fb-content-logo {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  max-width: 400px;
-  height: auto;
-}
+.container {
+  display: grid;
+  margin: auto;
+ }
+
 #logo-img {
   width: 100%;
   max-width: 300px;
   height: auto;
-}
-
-.fb-content-text h1 {
-  margin-bottom: 30px;
-}
-
-.fb-content-logo h2 {
-  padding-top: 20px;
-  padding-left: 40px;
 }
 
 .galeryGrid {
@@ -214,11 +198,18 @@ main {
 
 .imgContent {
   padding: 3em;
+  margin: auto;
 }
 
 .imgContent img {
   border-radius: 50%;
-
+  width: 100%;
+  max-height: 100%;
+  min-width: 100px;
+  padding: 1em;
+  display: inline-block;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .imgContent img:hover {
@@ -246,21 +237,14 @@ main {
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.301);
 }
 
-
-/* .banner {
-
-} */
-
 .second-banner, .galeryGrid, .third-banner {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   background-color: transparent;
   margin: 3em 2em 4em 2em;
 
 }
-
 
 .bannerIcon {
   display: flex;
@@ -273,11 +257,13 @@ main {
 }
 
 #icon-insul, #icon-water{
-  width: 150px;
-  height: 150px;
+  width: 50%;
+  max-height: 100%;
+  min-width: 130px;
   padding: 1em;
   display: inline-block;
   flex-direction: row;
+  justify-content: space-around;
 }
 
 .content-banner, .galeryGrid {
@@ -358,11 +344,11 @@ main {
 .footer-container .contact-info {
   font-family: 'Abel', sans-serif;
   position: absolute;
-  top: 70px;
-  width: 300px;
+  top: 100px;
+  width: 250px;
   /* height: calc(100% - 80px); */
   background-color: #4cf019;
-  padding: 30px;
+  padding: 20px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -396,7 +382,7 @@ main {
   font-weight: normal;
   position: absolute;
   padding: 30px 50px;
-  padding-left: 230px;
+  padding-left: 150px;
   margin-left: 130px;
   width: calc(100% - 150px);
   background: #5f5f5f;
@@ -407,13 +393,15 @@ main {
   padding-top: 12px;
   margin-bottom: 10px;
   color: #4cf019;
+  margin-left: 140px;
 }
 .footer-container .contact-form .formBox {
   display: flex;
   position: relative;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding-top: 20px;
+  padding: 20px;
+  margin-left: 120px;
 }
 .contact-form .formBox .inputBox {
   position: relative;
@@ -479,25 +467,14 @@ main {
   border-bottom: 1px solid #4cf019;
 }
 
-@media screen and (max-width: 520px) {
-  .first-banner-content{
-    display: flex;
-    flex-direction: column;
-    width: 100vh;
-    justify-content: center;
-    color: #000;
-  }
-  .footer-container .contact-form {
-    padding: 21px!important;
-  }
+@media screen and (max-width: 520px) {}
 
   .footer-container .contact-info ul.info {
     margin: 0;
   }
 }
 
-
-@media (max-width:600px) {
+@media (max-width: 500px) {
 
 }
 
@@ -512,14 +489,14 @@ main {
     display: inline-block;
     width: 50px;
     height: 50px;
-    padding: 25px 50px 39px 25px;
+    padding: 24px 53px 39px 25px;
   }
   .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
     background-color: rgba(0, 0, 0, 0.3);
   }
   .nav > .nav-btn > label > span {
     display: block;
-    width: 30px;
+    width: 27px;
     height: 7px;
     border-top: 2px solid #eee;
   }
@@ -543,7 +520,7 @@ main {
     height: 0px;
   }
   .nav > #nav-check:checked ~ .nav-links {
-    height: calc(50vh - 50px);
+    height: calc(44vh - 100px);
   }
   .footer-container .contact-form,
   .footer-container .contact-info {
@@ -556,19 +533,8 @@ main {
     margin-top: 1em;
   }
   .first-banner {
-    height: 1000px;
-    width: 100%;
-    background-color: #696969;
-  }
-  .fb-content-text {
-    display: block;
-    text-align: left;
-  }
-  .fb-content-logo {
-    flex-direction: column;
-  }
-  .fb-content-logo h2 {
-    padding-left: 20px;
+    height: 800px;
+    width: 50%;
   }
   .text-3 {
     display: block;
@@ -624,13 +590,33 @@ main {
     height: 980px;
     width: 100%;
     background-color: #696969;
-  }
 
+
+  }
+}
+
+@media screen and (min-width: 300px) and (max-width: 1091px) {
+  .contact-form h2 {
+    margin-left: 20px!important;
+  }
+  .footer-container .contact-form .formBox {
+    margin-left: 0px!important;
+  }
+}
+
+@media screen and (min-width: 1092px) {
+  .contact-form h2 {
+    margin-left: 140px;
+  }
+  .footer-container .contact-form .formBox {
+    margin-left: 30px;
+  }
 }
 
 @media screen and (max-width: 1400px) {
   .bloc-img-section h4{
     width: 310px;
-    margin: auto;
+    padding-left: 150px;
   }
+
 }
